# serializer version: 1
# name: TestDailyDSPView.test_navigation[breadcrumb]
  '''
  <nav aria-label="Fil d'ariane" class="c-breadcrumb">
              <ol class="breadcrumb">
                  <li class="breadcrumb-item">Retourner vers</li>
                  <li class="breadcrumb-item">
                      <a href="/statistiques/">Statistiques</a>
                  </li>
              </ol>
          </nav>
  '''
# ---
# name: TestForumStatView.test_sort_key[None-sort_by_sum_time_spent][sort_by_sum_time_spent]
  '''
  <main class="s-main" id="main" role="main">
              
                  
              
              
      <div class="container">
          <nav aria-label="Fil d'ariane" class="c-breadcrumb">
              <ol class="breadcrumb">
                  <li class="breadcrumb-item">Retourner vers</li>
                  <li class="breadcrumb-item">
                      <a href="/statistiques/">Statistiques</a>
                  </li>
              </ol>
          </nav>
      </div>
  
              
                  
      <section class="s-title-01 mt-lg-5">
          <div class="s-title-01__container container">
              <div class="s-title-01__row row">
                  <div class="s-title-01__col col-12">
                      <h1 class="s-title-01__title h1">Statistiques des fiches pratiques</h1>
                  </div>
              </div>
          </div>
      </section>
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row" id="most_rated">
                  <div class="s-section__col col-12">
                      <div class="c-box mb-3 mb-md-5">
                          <table class="table">
                              <caption>Sont présentes dans ce tableau, les fiches pratiques de l'espace Documents.
                                  <br/>
                                  Le nombre et la moyenne des notations sont calculés en temps réel.
                                  <br/>
                                  Le nombre de visites et le cumul du temps de lecture est calculé hebdomadairement, chaque lundi matin.
                              </caption>
                              
                                  <thead>
                                      <tr>
                                          <th scope="col">Fiche Pratique</th>
                                          
                                              <th scope="col">
                                                  <a class="text-decoration-none" href="/statistiques/documents/?sort=sum_time_spent">
                                                      Temps de lecture
                                                      <i class="ri-arrow-down-s-fill"></i>
                                                  </a>
                                              </th>
                                          
                                              <th scope="col">
                                                  <a class="text-decoration-none" href="/statistiques/documents/?sort=sum_visits">
                                                      Nombre de Visites
                                                      
                                                  </a>
                                              </th>
                                          
                                              <th scope="col">
                                                  <a class="text-decoration-none" href="/statistiques/documents/?sort=count_rating">
                                                      Nombres de notations
                                                      
                                                  </a>
                                              </th>
                                          
                                              <th scope="col">
                                                  <a class="text-decoration-none" href="/statistiques/documents/?sort=avg_rating">
                                                      Moyenne des notations
                                                      
                                                  </a>
                                              </th>
                                          
                                      </tr>
                                  </thead>
                              
                              <tbody>
                                  
                                      <tr>
                                          <th scope="row">
                                              <a href="">A</a>
                                              <br/>
                                              
                                          </th>
                                          <td>0h 00min</td>
                                          <td>0</td>
                                          <td>2</td>
                                          <td>4,00</td>
                                      </tr>
                                  
                                      <tr>
                                          <th scope="row">
                                              <a href="">B</a>
                                              <br/>
                                              
                                          </th>
                                          <td>0h 00min</td>
                                          <td>0</td>
                                          <td>1</td>
                                          <td>3,00</td>
                                      </tr>
                                  
                                      <tr>
                                          <th scope="row">
                                              <a href="">C</a>
                                              <br/>
                                              
                                          </th>
                                          <td>0h 00min</td>
                                          <td>0</td>
                                          <td>4</td>
                                          <td>2,00</td>
                                      </tr>
                                  
                                      <tr>
                                          <th scope="row">
                                              <a href="">D</a>
                                              <br/>
                                              
                                          </th>
                                          <td>0h 00min</td>
                                          <td>0</td>
                                          <td>3</td>
                                          <td>5,00</td>
                                      </tr>
                                  
                                      <tr>
                                          <th scope="row">
                                              <a href="">Document wo DocumentStats</a>
                                              <br/>
                                              
                                          </th>
                                          <td>0h 00min</td>
                                          <td>0</td>
                                          <td>pas de notation</td>
                                          <td></td>
                                      </tr>
                                  
                                      <tr>
                                          <th scope="row">
                                              <a href="">Orphelin Document</a>
                                              <br/>
                                              
                                          </th>
                                          <td>0h 00min</td>
                                          <td>0</td>
                                          <td>pas de notation</td>
                                          <td></td>
                                      </tr>
                                  
                              </tbody>
                          </table>
                      </div>
                  </div>
              </div>
          </div>
      </section>
  
              
          </main>
  '''
# ---
# name: TestForumStatView.test_sort_key[avg_rating-sort_by_avg_rating][sort_by_avg_rating]
  '''
  <main class="s-main" id="main" role="main">
              
                  
              
              
      <div class="container">
          <nav aria-label="Fil d'ariane" class="c-breadcrumb">
              <ol class="breadcrumb">
                  <li class="breadcrumb-item">Retourner vers</li>
                  <li class="breadcrumb-item">
                      <a href="/statistiques/">Statistiques</a>
                  </li>
              </ol>
          </nav>
      </div>
  
              
                  
      <section class="s-title-01 mt-lg-5">
          <div class="s-title-01__container container">
              <div class="s-title-01__row row">
                  <div class="s-title-01__col col-12">
                      <h1 class="s-title-01__title h1">Statistiques des fiches pratiques</h1>
                  </div>
              </div>
          </div>
      </section>
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row" id="most_rated">
                  <div class="s-section__col col-12">
                      <div class="c-box mb-3 mb-md-5">
                          <table class="table">
                              <caption>Sont présentes dans ce tableau, les fiches pratiques de l'espace Documents.
                                  <br/>
                                  Le nombre et la moyenne des notations sont calculés en temps réel.
                                  <br/>
                                  Le nombre de visites et le cumul du temps de lecture est calculé hebdomadairement, chaque lundi matin.
                              </caption>
                              
                                  <thead>
                                      <tr>
                                          <th scope="col">Fiche Pratique</th>
                                          
                                              <th scope="col">
                                                  <a class="text-decoration-none" href="/statistiques/documents/?sort=sum_time_spent">
                                                      Temps de lecture
                                                      
                                                  </a>
                                              </th>
                                          
                                              <th scope="col">
                                                  <a class="text-decoration-none" href="/statistiques/documents/?sort=sum_visits">
                                                      Nombre de Visites
                                                      
                                                  </a>
                                              </th>
                                          
                                              <th scope="col">
                                                  <a class="text-decoration-none" href="/statistiques/documents/?sort=count_rating">
                                                      Nombres de notations
                                                      
                                                  </a>
                                              </th>
                                          
                                              <th scope="col">
                                                  <a class="text-decoration-none" href="/statistiques/documents/?sort=avg_rating">
                                                      Moyenne des notations
                                                      <i class="ri-arrow-down-s-fill"></i>
                                                  </a>
                                              </th>
                                          
                                      </tr>
                                  </thead>
                              
                              <tbody>
                                  
                                      <tr>
                                          <th scope="row">
                                              <a href="">Orphelin Document</a>
                                              <br/>
                                              
                                          </th>
                                          <td>0h 00min</td>
                                          <td>0</td>
                                          <td>pas de notation</td>
                                          <td></td>
                                      </tr>
                                  
                                      <tr>
                                          <th scope="row">
                                              <a href="">Document wo DocumentStats</a>
                                              <br/>
                                              
                                          </th>
                                          <td>0h 00min</td>
                                          <td>0</td>
                                          <td>pas de notation</td>
                                          <td></td>
                                      </tr>
                                  
                                      <tr>
                                          <th scope="row">
                                              <a href="">D</a>
                                              <br/>
                                              
                                          </th>
                                          <td>0h 00min</td>
                                          <td>0</td>
                                          <td>3</td>
                                          <td>5,00</td>
                                      </tr>
                                  
                                      <tr>
                                          <th scope="row">
                                              <a href="">A</a>
                                              <br/>
                                              
                                          </th>
                                          <td>0h 00min</td>
                                          <td>0</td>
                                          <td>2</td>
                                          <td>4,00</td>
                                      </tr>
                                  
                                      <tr>
                                          <th scope="row">
                                              <a href="">B</a>
                                              <br/>
                                              
                                          </th>
                                          <td>0h 00min</td>
                                          <td>0</td>
                                          <td>1</td>
                                          <td>3,00</td>
                                      </tr>
                                  
                                      <tr>
                                          <th scope="row">
                                              <a href="">C</a>
                                              <br/>
                                              
                                          </th>
                                          <td>0h 00min</td>
                                          <td>0</td>
                                          <td>4</td>
                                          <td>2,00</td>
                                      </tr>
                                  
                              </tbody>
                          </table>
                      </div>
                  </div>
              </div>
          </div>
      </section>
  
              
          </main>
  '''
# ---
# name: TestForumStatView.test_sort_key[count_rating-sort_by_count_rating][sort_by_count_rating]
  '''
  <main class="s-main" id="main" role="main">
              
                  
              
              
      <div class="container">
          <nav aria-label="Fil d'ariane" class="c-breadcrumb">
              <ol class="breadcrumb">
                  <li class="breadcrumb-item">Retourner vers</li>
                  <li class="breadcrumb-item">
                      <a href="/statistiques/">Statistiques</a>
                  </li>
              </ol>
          </nav>
      </div>
  
              
                  
      <section class="s-title-01 mt-lg-5">
          <div class="s-title-01__container container">
              <div class="s-title-01__row row">
                  <div class="s-title-01__col col-12">
                      <h1 class="s-title-01__title h1">Statistiques des fiches pratiques</h1>
                  </div>
              </div>
          </div>
      </section>
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row" id="most_rated">
                  <div class="s-section__col col-12">
                      <div class="c-box mb-3 mb-md-5">
                          <table class="table">
                              <caption>Sont présentes dans ce tableau, les fiches pratiques de l'espace Documents.
                                  <br/>
                                  Le nombre et la moyenne des notations sont calculés en temps réel.
                                  <br/>
                                  Le nombre de visites et le cumul du temps de lecture est calculé hebdomadairement, chaque lundi matin.
                              </caption>
                              
                                  <thead>
                                      <tr>
                                          <th scope="col">Fiche Pratique</th>
                                          
                                              <th scope="col">
                                                  <a class="text-decoration-none" href="/statistiques/documents/?sort=sum_time_spent">
                                                      Temps de lecture
                                                      
                                                  </a>
                                              </th>
                                          
                                              <th scope="col">
                                                  <a class="text-decoration-none" href="/statistiques/documents/?sort=sum_visits">
                                                      Nombre de Visites
                                                      
                                                  </a>
                                              </th>
                                          
                                              <th scope="col">
                                                  <a class="text-decoration-none" href="/statistiques/documents/?sort=count_rating">
                                                      Nombres de notations
                                                      <i class="ri-arrow-down-s-fill"></i>
                                                  </a>
                                              </th>
                                          
                                              <th scope="col">
                                                  <a class="text-decoration-none" href="/statistiques/documents/?sort=avg_rating">
                                                      Moyenne des notations
                                                      
                                                  </a>
                                              </th>
                                          
                                      </tr>
                                  </thead>
                              
                              <tbody>
                                  
                                      <tr>
                                          <th scope="row">
                                              <a href="">Orphelin Document</a>
                                              <br/>
                                              
                                          </th>
                                          <td>0h 00min</td>
                                          <td>0</td>
                                          <td>pas de notation</td>
                                          <td></td>
                                      </tr>
                                  
                                      <tr>
                                          <th scope="row">
                                              <a href="">Document wo DocumentStats</a>
                                              <br/>
                                              
                                          </th>
                                          <td>0h 00min</td>
                                          <td>0</td>
                                          <td>pas de notation</td>
                                          <td></td>
                                      </tr>
                                  
                                      <tr>
                                          <th scope="row">
                                              <a href="">C</a>
                                              <br/>
                                              
                                          </th>
                                          <td>0h 00min</td>
                                          <td>0</td>
                                          <td>4</td>
                                          <td>2,00</td>
                                      </tr>
                                  
                                      <tr>
                                          <th scope="row">
                                              <a href="">D</a>
                                              <br/>
                                              
                                          </th>
                                          <td>0h 00min</td>
                                          <td>0</td>
                                          <td>3</td>
                                          <td>5,00</td>
                                      </tr>
                                  
                                      <tr>
                                          <th scope="row">
                                              <a href="">A</a>
                                              <br/>
                                              
                                          </th>
                                          <td>0h 00min</td>
                                          <td>0</td>
                                          <td>2</td>
                                          <td>4,00</td>
                                      </tr>
                                  
                                      <tr>
                                          <th scope="row">
                                              <a href="">B</a>
                                              <br/>
                                              
                                          </th>
                                          <td>0h 00min</td>
                                          <td>0</td>
                                          <td>1</td>
                                          <td>3,00</td>
                                      </tr>
                                  
                              </tbody>
                          </table>
                      </div>
                  </div>
              </div>
          </div>
      </section>
  
              
          </main>
  '''
# ---
# name: TestForumStatView.test_sort_key[sum_time_spent-sort_by_sum_time_spent][sort_by_sum_time_spent]
  '''
  <main class="s-main" id="main" role="main">
              
                  
              
              
      <div class="container">
          <nav aria-label="Fil d'ariane" class="c-breadcrumb">
              <ol class="breadcrumb">
                  <li class="breadcrumb-item">Retourner vers</li>
                  <li class="breadcrumb-item">
                      <a href="/statistiques/">Statistiques</a>
                  </li>
              </ol>
          </nav>
      </div>
  
              
                  
      <section class="s-title-01 mt-lg-5">
          <div class="s-title-01__container container">
              <div class="s-title-01__row row">
                  <div class="s-title-01__col col-12">
                      <h1 class="s-title-01__title h1">Statistiques des fiches pratiques</h1>
                  </div>
              </div>
          </div>
      </section>
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row" id="most_rated">
                  <div class="s-section__col col-12">
                      <div class="c-box mb-3 mb-md-5">
                          <table class="table">
                              <caption>Sont présentes dans ce tableau, les fiches pratiques de l'espace Documents.
                                  <br/>
                                  Le nombre et la moyenne des notations sont calculés en temps réel.
                                  <br/>
                                  Le nombre de visites et le cumul du temps de lecture est calculé hebdomadairement, chaque lundi matin.
                              </caption>
                              
                                  <thead>
                                      <tr>
                                          <th scope="col">Fiche Pratique</th>
                                          
                                              <th scope="col">
                                                  <a class="text-decoration-none" href="/statistiques/documents/?sort=sum_time_spent">
                                                      Temps de lecture
                                                      <i class="ri-arrow-down-s-fill"></i>
                                                  </a>
                                              </th>
                                          
                                              <th scope="col">
                                                  <a class="text-decoration-none" href="/statistiques/documents/?sort=sum_visits">
                                                      Nombre de Visites
                                                      
                                                  </a>
                                              </th>
                                          
                                              <th scope="col">
                                                  <a class="text-decoration-none" href="/statistiques/documents/?sort=count_rating">
                                                      Nombres de notations
                                                      
                                                  </a>
                                              </th>
                                          
                                              <th scope="col">
                                                  <a class="text-decoration-none" href="/statistiques/documents/?sort=avg_rating">
                                                      Moyenne des notations
                                                      
                                                  </a>
                                              </th>
                                          
                                      </tr>
                                  </thead>
                              
                              <tbody>
                                  
                                      <tr>
                                          <th scope="row">
                                              <a href="">Document wo DocumentStats</a>
                                              <br/>
                                              
                                          </th>
                                          <td>0h 00min</td>
                                          <td>0</td>
                                          <td>pas de notation</td>
                                          <td></td>
                                      </tr>
                                  
                                      <tr>
                                          <th scope="row">
                                              <a href="">D</a>
                                              <br/>
                                              
                                          </th>
                                          <td>0h 00min</td>
                                          <td>0</td>
                                          <td>3</td>
                                          <td>5,00</td>
                                      </tr>
                                  
                                      <tr>
                                          <th scope="row">
                                              <a href="">C</a>
                                              <br/>
                                              
                                          </th>
                                          <td>0h 00min</td>
                                          <td>0</td>
                                          <td>4</td>
                                          <td>2,00</td>
                                      </tr>
                                  
                                      <tr>
                                          <th scope="row">
                                              <a href="">B</a>
                                              <br/>
                                              
                                          </th>
                                          <td>0h 00min</td>
                                          <td>0</td>
                                          <td>1</td>
                                          <td>3,00</td>
                                      </tr>
                                  
                                      <tr>
                                          <th scope="row">
                                              <a href="">A</a>
                                              <br/>
                                              
                                          </th>
                                          <td>0h 00min</td>
                                          <td>0</td>
                                          <td>2</td>
                                          <td>4,00</td>
                                      </tr>
                                  
                                      <tr>
                                          <th scope="row">
                                              <a href="">Orphelin Document</a>
                                              <br/>
                                              
                                          </th>
                                          <td>0h 00min</td>
                                          <td>0</td>
                                          <td>pas de notation</td>
                                          <td></td>
                                      </tr>
                                  
                              </tbody>
                          </table>
                      </div>
                  </div>
              </div>
          </div>
      </section>
  
              
          </main>
  '''
# ---
# name: TestForumStatView.test_sort_key[sum_visits-sort_by_sum_visits][sort_by_sum_visits]
  '''
  <main class="s-main" id="main" role="main">
              
                  
              
              
      <div class="container">
          <nav aria-label="Fil d'ariane" class="c-breadcrumb">
              <ol class="breadcrumb">
                  <li class="breadcrumb-item">Retourner vers</li>
                  <li class="breadcrumb-item">
                      <a href="/statistiques/">Statistiques</a>
                  </li>
              </ol>
          </nav>
      </div>
  
              
                  
      <section class="s-title-01 mt-lg-5">
          <div class="s-title-01__container container">
              <div class="s-title-01__row row">
                  <div class="s-title-01__col col-12">
                      <h1 class="s-title-01__title h1">Statistiques des fiches pratiques</h1>
                  </div>
              </div>
          </div>
      </section>
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row" id="most_rated">
                  <div class="s-section__col col-12">
                      <div class="c-box mb-3 mb-md-5">
                          <table class="table">
                              <caption>Sont présentes dans ce tableau, les fiches pratiques de l'espace Documents.
                                  <br/>
                                  Le nombre et la moyenne des notations sont calculés en temps réel.
                                  <br/>
                                  Le nombre de visites et le cumul du temps de lecture est calculé hebdomadairement, chaque lundi matin.
                              </caption>
                              
                                  <thead>
                                      <tr>
                                          <th scope="col">Fiche Pratique</th>
                                          
                                              <th scope="col">
                                                  <a class="text-decoration-none" href="/statistiques/documents/?sort=sum_time_spent">
                                                      Temps de lecture
                                                      
                                                  </a>
                                              </th>
                                          
                                              <th scope="col">
                                                  <a class="text-decoration-none" href="/statistiques/documents/?sort=sum_visits">
                                                      Nombre de Visites
                                                      <i class="ri-arrow-down-s-fill"></i>
                                                  </a>
                                              </th>
                                          
                                              <th scope="col">
                                                  <a class="text-decoration-none" href="/statistiques/documents/?sort=count_rating">
                                                      Nombres de notations
                                                      
                                                  </a>
                                              </th>
                                          
                                              <th scope="col">
                                                  <a class="text-decoration-none" href="/statistiques/documents/?sort=avg_rating">
                                                      Moyenne des notations
                                                      
                                                  </a>
                                              </th>
                                          
                                      </tr>
                                  </thead>
                              
                              <tbody>
                                  
                                      <tr>
                                          <th scope="row">
                                              <a href="">Document wo DocumentStats</a>
                                              <br/>
                                              
                                          </th>
                                          <td>0h 00min</td>
                                          <td>0</td>
                                          <td>pas de notation</td>
                                          <td></td>
                                      </tr>
                                  
                                      <tr>
                                          <th scope="row">
                                              <a href="">D</a>
                                              <br/>
                                              
                                          </th>
                                          <td>0h 00min</td>
                                          <td>0</td>
                                          <td>3</td>
                                          <td>5,00</td>
                                      </tr>
                                  
                                      <tr>
                                          <th scope="row">
                                              <a href="">C</a>
                                              <br/>
                                              
                                          </th>
                                          <td>0h 00min</td>
                                          <td>0</td>
                                          <td>4</td>
                                          <td>2,00</td>
                                      </tr>
                                  
                                      <tr>
                                          <th scope="row">
                                              <a href="">B</a>
                                              <br/>
                                              
                                          </th>
                                          <td>0h 00min</td>
                                          <td>0</td>
                                          <td>1</td>
                                          <td>3,00</td>
                                      </tr>
                                  
                                      <tr>
                                          <th scope="row">
                                              <a href="">A</a>
                                              <br/>
                                              
                                          </th>
                                          <td>0h 00min</td>
                                          <td>0</td>
                                          <td>2</td>
                                          <td>4,00</td>
                                      </tr>
                                  
                                      <tr>
                                          <th scope="row">
                                              <a href="">Orphelin Document</a>
                                              <br/>
                                              
                                          </th>
                                          <td>0h 00min</td>
                                          <td>0</td>
                                          <td>pas de notation</td>
                                          <td></td>
                                      </tr>
                                  
                              </tbody>
                          </table>
                      </div>
                  </div>
              </div>
          </div>
      </section>
  
              
          </main>
  '''
# ---
# name: TestForumStatView.test_sort_key[unknown-sort_by_sum_time_spent][sort_by_sum_time_spent]
  '''
  <main class="s-main" id="main" role="main">
              
                  
              
              
      <div class="container">
          <nav aria-label="Fil d'ariane" class="c-breadcrumb">
              <ol class="breadcrumb">
                  <li class="breadcrumb-item">Retourner vers</li>
                  <li class="breadcrumb-item">
                      <a href="/statistiques/">Statistiques</a>
                  </li>
              </ol>
          </nav>
      </div>
  
              
                  
      <section class="s-title-01 mt-lg-5">
          <div class="s-title-01__container container">
              <div class="s-title-01__row row">
                  <div class="s-title-01__col col-12">
                      <h1 class="s-title-01__title h1">Statistiques des fiches pratiques</h1>
                  </div>
              </div>
          </div>
      </section>
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row" id="most_rated">
                  <div class="s-section__col col-12">
                      <div class="c-box mb-3 mb-md-5">
                          <table class="table">
                              <caption>Sont présentes dans ce tableau, les fiches pratiques de l'espace Documents.
                                  <br/>
                                  Le nombre et la moyenne des notations sont calculés en temps réel.
                                  <br/>
                                  Le nombre de visites et le cumul du temps de lecture est calculé hebdomadairement, chaque lundi matin.
                              </caption>
                              
                                  <thead>
                                      <tr>
                                          <th scope="col">Fiche Pratique</th>
                                          
                                              <th scope="col">
                                                  <a class="text-decoration-none" href="/statistiques/documents/?sort=sum_time_spent">
                                                      Temps de lecture
                                                      <i class="ri-arrow-down-s-fill"></i>
                                                  </a>
                                              </th>
                                          
                                              <th scope="col">
                                                  <a class="text-decoration-none" href="/statistiques/documents/?sort=sum_visits">
                                                      Nombre de Visites
                                                      
                                                  </a>
                                              </th>
                                          
                                              <th scope="col">
                                                  <a class="text-decoration-none" href="/statistiques/documents/?sort=count_rating">
                                                      Nombres de notations
                                                      
                                                  </a>
                                              </th>
                                          
                                              <th scope="col">
                                                  <a class="text-decoration-none" href="/statistiques/documents/?sort=avg_rating">
                                                      Moyenne des notations
                                                      
                                                  </a>
                                              </th>
                                          
                                      </tr>
                                  </thead>
                              
                              <tbody>
                                  
                                      <tr>
                                          <th scope="row">
                                              <a href="">A</a>
                                              <br/>
                                              
                                          </th>
                                          <td>0h 00min</td>
                                          <td>0</td>
                                          <td>2</td>
                                          <td>4,00</td>
                                      </tr>
                                  
                                      <tr>
                                          <th scope="row">
                                              <a href="">B</a>
                                              <br/>
                                              
                                          </th>
                                          <td>0h 00min</td>
                                          <td>0</td>
                                          <td>1</td>
                                          <td>3,00</td>
                                      </tr>
                                  
                                      <tr>
                                          <th scope="row">
                                              <a href="">C</a>
                                              <br/>
                                              
                                          </th>
                                          <td>0h 00min</td>
                                          <td>0</td>
                                          <td>4</td>
                                          <td>2,00</td>
                                      </tr>
                                  
                                      <tr>
                                          <th scope="row">
                                              <a href="">D</a>
                                              <br/>
                                              
                                          </th>
                                          <td>0h 00min</td>
                                          <td>0</td>
                                          <td>3</td>
                                          <td>5,00</td>
                                      </tr>
                                  
                                      <tr>
                                          <th scope="row">
                                              <a href="">Orphelin Document</a>
                                              <br/>
                                              
                                          </th>
                                          <td>0h 00min</td>
                                          <td>0</td>
                                          <td>pas de notation</td>
                                          <td></td>
                                      </tr>
                                  
                                      <tr>
                                          <th scope="row">
                                              <a href="">Document wo DocumentStats</a>
                                              <br/>
                                              
                                          </th>
                                          <td>0h 00min</td>
                                          <td>0</td>
                                          <td>pas de notation</td>
                                          <td></td>
                                      </tr>
                                  
                              </tbody>
                          </table>
                      </div>
                  </div>
              </div>
          </div>
      </section>
  
              
          </main>
  '''
# ---
# name: TestForumStatWeekArchiveView.test_header_and_breadcrumb[breadcrumb]
  '''
  <nav aria-label="Fil d'ariane" class="c-breadcrumb">
              <ol class="breadcrumb">
                  <li class="breadcrumb-item">Retourner vers</li>
                  <li class="breadcrumb-item">
                      <a href="/statistiques/">Statistiques</a>
                  </li>
              </ol>
          </nav>
  '''
# ---
# name: TestForumStatWeekArchiveView.test_header_and_breadcrumb[title-01]
  '''
  <section class="s-title-01 mt-lg-5">
          <div class="s-title-01__container container">
              <div class="s-title-01__row row">
                  <div class="s-title-01__col col-12">
                      <h1 class="s-title-01__title h1">
                          Statistiques de la semaine du 20 mai 2024 au 26 mai 2024
                      </h1>
                  </div>
              </div>
          </div>
      </section>
  '''
# ---
# name: TestForumStatWeekArchiveView.test_most_rated_documents[most_rated_documents]
  '''
  <div class="s-section__row row" id="most_rated">
                  <div class="s-section__col col-12">
                      <div class="c-box mb-3 mb-md-5">
                          <h2>
                              Les 1 fiches pratiques les plus notées pendant la semaine du 20 mai 2024 au 26 mai 2024
                          </h2>
                          <table class="table">
                              <thead>
                                  <tr>
                                      <th scope="col">Fiche Pratique</th>
                                      <th scope="col">Nombres de notations de la semaine</th>
                                      <th scope="col">Notation moyenne totale</th>
                                  </tr>
                              </thead>
                              <tbody>
                                  
                                      <tr>
                                          <th scope="row">Document A</th>
                                          <td>2</td>
                                          <td>3,00</td>
                                      </tr>
                                  
                              </tbody>
                          </table>
                      </div>
                  </div>
              </div>
  '''
# ---
# name: TestForumStatWeekArchiveView.test_most_viewed_forums[most_viewed_forums]
  '''
  <div class="s-section__row row" id="most_viewed">
                  <div class="s-section__col col-12">
                      <div class="c-box mb-3 mb-md-5">
                          <h2>
                              Les 2 fiches pratiques les plus lues pendant la semaine du 20 mai 2024 au 26 mai 2024
                          </h2>
                          <table class="table">
                              <thead>
                                  <tr>
                                      <th scope="col">Fiche Pratique</th>
                                      <th scope="col">Visiteurs uniques</th>
                                      <th scope="col">Visiteurs uniques entrants</th>
                                      <th scope="col">Temps de lecture total</th>
                                  </tr>
                              </thead>
                              <tbody>
                                  
                                      <tr>
                                          <th scope="row">Forum B</th>
                                          <td>17</td>
                                          <td>5</td>
                                          <td>1978 secondes</td>
                                      </tr>
                                  
                                      <tr>
                                          <th scope="row">Forum A</th>
                                          <td>10</td>
                                          <td>8</td>
                                          <td>1000 secondes</td>
                                      </tr>
                                  
                              </tbody>
                          </table>
                      </div>
                  </div>
              </div>
  '''
# ---
# name: TestMonthlyVisitorsView.test_navigation[breadcrumb]
  '''
  <nav aria-label="Fil d'ariane" class="c-breadcrumb">
              <ol class="breadcrumb">
                  <li class="breadcrumb-item">Retourner vers</li>
                  <li class="breadcrumb-item">
                      <a href="/statistiques/">Statistiques</a>
                  </li>
              </ol>
          </nav>
  '''
# ---
# name: TestStatistiquesPageView.test_dsp_count[dsp]
  '''
  <div class="s-section__row row" id="daily_dsp">
                  <div class="s-section__col col-12">
                      <div class="c-box mb-3 mb-md-5">
                          <h2>10 Diagnostiques Parcours IAE</h2>
                          <p>
                              Réalisés sur la communauté de l'inclusion depuis le 24 février 2024
                              <span class="fs-sm">(<a href="/statistiques/dsp/">Voir les détails</a>)</span>
                          </p>
                      </div>
                  </div>
              </div>
  '''
# ---
